# flow_patcher

./: .gitignore  EXECUTION_FLOW.md  README.md  compatibility.json  justfile  pyproject.toml
flow_patcher/: __init__.py  cli.py  inject.py  patch_dylib.m  probe.py
frida/: diag.js  example.py  script.js
tests/: conftest.py  test_cli.py  test_cli_probe.py  test_dylib.m  test_dylib_hooks.py  test_inject.py  test_integration.py  test_probe.py
