[project]
name = "flow-patcher"
version = "1.0.0"
description = "Permanent patch for the Flow app Pro subscription check"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.9", "mypy>=1.14"]

[project.scripts]
flow-patcher = "flow_patcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flow_patcher"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests requiring Flow.app",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
